Fix: Adjusted active session card width to mimic Jellyfin's default behaviour on smaller screens

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -852,3 +852,8 @@ div[data-role=controlgroup] a.ui-btn-active {
     border-radius: .5em;
     backdrop-filter: blur(1em);
 }
+
+.activeSession {
+    width: 98% !important;
+    max-width: 27rem !important;
+}
